sample app/infra/k8s/comments-depl.yaml
# There are certain buckets where we can get certain objects to get Deploymeny object we use apps/v1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # replicas means number of Pods to run this image
  replicas: 1
  selector:
    # Selector It will find all Pods with name <key>:<value>app: posts names can be anything (line 13 got macthed with 17 and get spec to generate Pod)
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: harshanerella/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-serv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
