sample app/infra/k8s/moderation-depl.yaml
# There are certain buckets where we can get certain objects to get Deploymeny object we use apps/v1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # replicas means number of Pods to run this image
  replicas: 1
  selector:
    # Selector It will find all Pods with name <key>:<value>app: posts names can be anything (line 13 got macthed with 17 and get spec to generate Pod)
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: harshanerella/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-serv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
