sample app/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-serv
spec:
  type: NodePort
  selector:
    # This selector will search for the pod with key:value as app:posts and expose with config port
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
