sample app/infra/k8s/query-depl.yaml
# There are certain buckets where we can get certain objects to get Deploymeny object we use apps/v1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # replicas means number of Pods to run this image
  replicas: 1
  selector:
    # Selector It will find all Pods with name <key>:<value>app: posts names can be anything (line 13 got macthed with 17 and get spec to generate Pod)
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: harshanerella/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-serv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
